# AI-assistant_bot

./: .gitignore  .mcp.json.example  AVATAR_README.md  AVATAR_SYSTEM_STATUS.md  CLAUDE.md  README.md  pyproject.toml  run_dev.py  run_server.py  需求.md
.claude/: settings.local.json
.claude/taskmaster-data/: project.json  wbs-todos.json
docs/: 02_project_brief_and_prd.md  03_behavior_driven_development_guide.md  05_architecture_and_design_document.md  README.md
docs/dev/: development_progress_report.md  frontend-api-audit-report.md  linus_test_cleanup_complete.md  task15_cosyvoice_progress.md  test_coverage_report.md
docs/launch/: mvp_launch_checklist.md
docs/planning/: mvp_tech_spec.md
frontend/: tailwind.config.ts  test.html
frontend/src/: TestComponent.tsx
frontend/src/components/: ConversationHistory.tsx  ConversationHistory_Broken.tsx  DemoPanel.tsx  VoiceProfileManager.tsx
frontend/src/hooks/: use-avatar-api.tsx  use-avatar-websocket.tsx
frontend/src/lib/: api-client.ts  api-config.ts  websocket-client.ts
scripts/: README.md  avatar-scripts  check_avatar_status.sh  start_avatar_system.sh  stop_avatar_system.sh  validate_setup.py
scripts/maintenance/: cleanup_cache.sh  linux_resource_cleanup.sh  quick_cleanup.sh
scripts/setup/: WSL2_CUDA_SETUP.md  download_models.py  init_database.py  setup_cuda_wsl2.ps1  setup_cuda_wsl2.sh  validate_setup.py
scripts/testing/: create_simple_test_audio.py  create_stt_test_audio.py  generate_test_audio.py  run_tests.sh  test_model_loading.py
src/avatar/: __init__.py  main.py
src/avatar/api/: __init__.py  websocket.py
src/avatar/core/: __init__.py  audio_utils.py  config.py
src/avatar/services/: __init__.py  database.py  llm.py  llm_local.py  stt.py  stt_local.py  tts.py  tts_local.py
tests/e2e/: test_websocket_full.py
